--- a/css/main.css
+++ b/css/main.css
@@ -10,13 +10,25 @@ body{
 	height: 100vh;
 
 	font-family: Arial, Helveica, sans-serif ;
-	color: #FF5D00 ;
+	color: white ;
 
 
 
 }
-#main-container{
-	
+th{
+width: 200px;
+height: 100px;
+
+}
+.tabla {
+
+	border-spacing: 30px;
+}
+img{
+
+	width: 370px;
+    height: 190px;
+
 }
 
 
@@ -24,10 +36,7 @@ body{
 	height: 30px;
 	width: 140px;
 	margin-left: 88%;
-	margin:0px 10px 10px 1100px;
-	margin-top: -20%;
-	position: relative;
-	float: right;
+	
 	
 }
 
