--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 *{
-	padding: 0;
+	padding: 2px;
 	margin: 0;
 }
 
@@ -9,11 +9,13 @@ body{
 	background-size: 100%;
 	height: 100vh;
 
+
+}
+
+#titulo{
+	text-align: center;
 	font-family: Arial, Helveica, sans-serif ;
-	color: white ;
-
-
-
+	color: orangered ;
 }
 th{
 width: 200px;
@@ -27,15 +29,23 @@ height: 100px;
 img{
 
 	width: 370px;
-    height: 190px;
+	height: 190px;
+	transition: transform 0.5s;
 
 }
 
+img:hover{
+	filter: blur(1.3px);
+	transform:  scale(1.1);
+
+}
 
 #btn_login{
 	height: 30px;
 	width: 140px;
-	margin-left: 88%;
+	
+	padding: 5px;
+	margin: 10px;
 	
 	
 }
