--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,15 @@ body{
 	justify-content: center;
 	align-items: center;
 }
+#body-login{
+	background-image: url(../imgs/pareja.jpg);
+	height: 650px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+
 
 #h1-registro{
 
@@ -68,28 +77,6 @@ input:focus~label{
 	color: #2196f3;
 }
 
-.barra{
-	position: relative;
-	display: block;
-	width:100%;
-
-}
-
-.barra::before{
-	content: "";
-	height: 3px;
-	width: 0%;
-	bottom: 0;
-	position: absolute;
-	background: -webkit-linear-gradient(to left, #23074d, #cc5333);
-	transition: 0.3s ease width;
-
-}
-
-input:focus~.barra::before{
-
-	width: 100%;
-}
 
 #btn-registrarse{
 	font-family: 'roboto';
@@ -97,6 +84,21 @@ input:focus~.barra::before{
     background: -webkit-linear-gradient(to right, #cc5333, #23074d);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #cc5333, #23074d); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	border: none;
+	display: block;
+	width: 80%;
+	margin: 10px auto;
+	color: white;
+	height: 40px;
+	font-size: 16px;
+	cursor: pointer;
+
+
+}
+#btn-login{
+	background: #FDC830;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #F37335, #FDC830);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #F37335, #FDC830); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    border: none;
 	display: block;
 	width: 80%;
 	margin: 10px auto;
