--- a/css/main.css
+++ b/css/main.css
@@ -4,16 +4,11 @@
 	margin: 0;
 }
 
-
-
-
 body{
 
-	background-image: url(../imgs/Fondo-Metalizado.jpg);
+	background-image: url(../imgs/triangle.jpg);
 	background-size: 100%;
 	height: 100vh;
-
-
 }
 
 .a-index{
@@ -43,7 +38,43 @@ body{
 	justify-content: center;
 	align-items: center;
 }
+#body-info{
+	background-image: url(../imgs/Triangulo.jpg);
+	height: 650px;
+	
+}
 
+#p-info{
+	color: blanchedalmond;
+}
+
+
+
+.menu{
+	list-style: none;
+	padding: 0;
+	background: #092327;
+	width:  100%;
+	max-width: 10005px;
+	margin: auto;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.menu li a{
+	text-decoration: none;
+	color: blanchedalmond;
+	padding: 15px;
+	display: block;
+}
+.menu li{
+	display: inline-block;
+	text-align: center;
+}
+
+.menu li a:hover{
+	background: #ef8354;
+
+}
 
 
 
@@ -124,9 +155,15 @@ input:focus~label{
 
 }
 #titulo{
+	margin-left: 6%;
+	font-family: 'Times New Roman', Times, serif;
+	color: rgb(255, 166, 0) ;
+}
+#titulo-info{
 	text-align: center;
-	font-family: Arial, Helveica, sans-serif ;
-	color: rgb(30, 255, 0) ;
+	font-family: 'Times New Roman', Times, serif;
+	font-size: 45px;
+	color: rgb(255, 255, 255) ;
 }
 th{
 width: 200px;
