--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,6 @@ body{
 }
 
 
-
 .menu{
 	list-style: none;
 	padding: 0;
@@ -155,9 +154,9 @@ input:focus~label{
 
 }
 #titulo{
-	margin-left: 6%;
+	margin-left: 14%;
 	font-family: 'Times New Roman', Times, serif;
-	color: rgb(51, 255, 0) ;
+	color: rgb(6, 20, 218) ;
 }
 #titulo-info{
 	text-align: center;
@@ -171,7 +170,7 @@ height: 100px;
 
 }
 .tabla {
-
+	margin: auto;
 	border-spacing: 30px;
 }
 img{
@@ -205,5 +204,60 @@ img:hover{
 	font-family: cursive;
 }
 
+.izquierda{
+	background:goldenrod;
+	height: 100vh;
+	width: 50%;
+	text-align: center;
+	
+}
+
+.derecha {
+   background: url(../imgs/ducati_1199_ducati_1199_panigale_motorcycle_red_101094_1366x768.jpg);
+   background-size: cover;
+   background-position: center;
+   width:50%;
+   height: 100vh;
+}
+
+#pantalla-dividida {
+   display: flex;
+}
+
+#bienvenido{
+	color:cornsilk;
+	font-size: 90px;
+	width: 50%;
+	margin: auto;
+	margin-bottom: 20px;
+	font-family: 'Big Shoulders Display', cursive;
+	margin-top: 25%;
+	
+}
+
+#parrafo-index{
+
+	font-size: 25px;
+	line-height: 30px;
+	width: 50%;
+	margin: auto;
+	font-family: 'Ubuntu', sans-serif;
+	margin-top:center;
 
 
+}
+
+#a-inicio{
+	border: 4px solid #fff;
+	padding: 20px;
+	text-decoration: none;
+	color:honeydew;
+	border-radius: 30px;
+	font-weight: bold;
+	display: inline-block;
+	margin-top: 5%;
+	display: inline-block;
+	font-family: 'Big Shoulders Display', cursive;
+	font-size: 30px;
+	
+}
